parser/src/snapshots/rustpython_parser__context__tests__ann_assign_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: AnnAssign(
            StmtAnnAssign {
                target: Attributed {
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "x",
                            ),
                            ctx: Store,
                            range: 0..1,
                        },
                    ),
                },
                annotation: Attributed {
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "int",
                            ),
                            ctx: Load,
                            range: 3..6,
                        },
                    ),
                },
                value: Some(
                    Attributed {
                        custom: (),
                        node: Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                                range: 9..10,
                            },
                        ),
                    },
                ),
                simple: true,
                range: 0..10,
            },
        ),
    },
]
