parser/src/snapshots/rustpython_parser__context__tests__assign_attribute.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Attributed {
                        custom: (),
                        node: Attribute(
                            ExprAttribute {
                                value: Attributed {
                                    custom: (),
                                    node: Name(
                                        ExprName {
                                            id: Identifier(
                                                "x",
                                            ),
                                            ctx: Load,
                                            range: 0..1,
                                        },
                                    ),
                                },
                                attr: Identifier(
                                    "y",
                                ),
                                ctx: Store,
                                range: 0..3,
                            },
                        ),
                    },
                ],
                value: Attributed {
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                            range: 7..8,
                                        },
                                    ),
                                },
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                            range: 10..11,
                                        },
                                    ),
                                },
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                            range: 13..14,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                            range: 6..15,
                        },
                    ),
                },
                type_comment: None,
                range: 0..15,
            },
        ),
    },
]
