parser/src/snapshots/rustpython_parser__context__tests__assign_for.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    For(
        StmtFor {
            target: Name(
                ExprName {
                    id: Identifier(
                        "x",
                    ),
                    ctx: Store,
                    range: 4..5,
                },
            ),
            iter: Tuple(
                ExprTuple {
                    elts: [
                        Constant(
                            ExprConstant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                                range: 10..11,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                                range: 13..14,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                                range: 16..17,
                            },
                        ),
                    ],
                    ctx: Load,
                    range: 9..18,
                },
            ),
            body: [
                Pass(
                    StmtPass {
                        range: 20..24,
                    },
                ),
            ],
            orelse: [],
            type_comment: None,
            range: 0..24,
        },
    ),
]
