parser/src/snapshots/rustpython_parser__context__tests__assign_name.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Attributed {
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "x",
                                ),
                                ctx: Store,
                                range: 0..1,
                            },
                        ),
                    },
                ],
                value: Attributed {
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                            range: 5..6,
                                        },
                                    ),
                                },
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                            range: 8..9,
                                        },
                                    ),
                                },
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                            range: 11..12,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                            range: 4..13,
                        },
                    ),
                },
                type_comment: None,
                range: 0..13,
            },
        ),
    },
]
