parser/src/snapshots/rustpython_parser__context__tests__assign_set_comp.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Assign(
        StmtAssign {
            targets: [
                Name(
                    ExprName {
                        id: Identifier(
                            "x",
                        ),
                        ctx: Store,
                        range: 0..1,
                    },
                ),
            ],
            value: SetComp(
                ExprSetComp {
                    elt: Name(
                        ExprName {
                            id: Identifier(
                                "y",
                            ),
                            ctx: Load,
                            range: 5..6,
                        },
                    ),
                    generators: [
                        Comprehension {
                            target: Name(
                                ExprName {
                                    id: Identifier(
                                        "y",
                                    ),
                                    ctx: Store,
                                    range: 11..12,
                                },
                            ),
                            iter: Tuple(
                                ExprTuple {
                                    elts: [
                                        Constant(
                                            ExprConstant {
                                                value: Int(
                                                    1,
                                                ),
                                                kind: None,
                                                range: 17..18,
                                            },
                                        ),
                                        Constant(
                                            ExprConstant {
                                                value: Int(
                                                    2,
                                                ),
                                                kind: None,
                                                range: 20..21,
                                            },
                                        ),
                                        Constant(
                                            ExprConstant {
                                                value: Int(
                                                    3,
                                                ),
                                                kind: None,
                                                range: 23..24,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    range: 16..25,
                                },
                            ),
                            ifs: [],
                            is_async: false,
                            range: (),
                        },
                    ],
                    range: 4..26,
                },
            ),
            type_comment: None,
            range: 0..26,
        },
    ),
]
