parser/src/snapshots/rustpython_parser__context__tests__assign_tuple.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Assign(
            StmtAssign {
                targets: [
                    Attributed {
                        custom: (),
                        node: Tuple(
                            ExprTuple {
                                elts: [
                                    Attributed {
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "x",
                                                ),
                                                ctx: Store,
                                                range: 1..2,
                                            },
                                        ),
                                    },
                                    Attributed {
                                        custom: (),
                                        node: Name(
                                            ExprName {
                                                id: Identifier(
                                                    "y",
                                                ),
                                                ctx: Store,
                                                range: 4..5,
                                            },
                                        ),
                                    },
                                ],
                                ctx: Store,
                                range: 0..6,
                            },
                        ),
                    },
                ],
                value: Attributed {
                    custom: (),
                    node: Tuple(
                        ExprTuple {
                            elts: [
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                            range: 10..11,
                                        },
                                    ),
                                },
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                            range: 13..14,
                                        },
                                    ),
                                },
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                3,
                                            ),
                                            kind: None,
                                            range: 16..17,
                                        },
                                    ),
                                },
                            ],
                            ctx: Load,
                            range: 9..18,
                        },
                    ),
                },
                type_comment: None,
                range: 0..18,
            },
        ),
    },
]
