parser/src/snapshots/rustpython_parser__context__tests__assign_with.snap
---
source: parser/src/context.rs
expression: parse_ast
---
[
    With(
        StmtWith {
            items: [
                Withitem {
                    context_expr: Constant(
                        ExprConstant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                            range: 5..6,
                        },
                    ),
                    optional_vars: Some(
                        Name(
                            ExprName {
                                id: Identifier(
                                    "x",
                                ),
                                ctx: Store,
                                range: 10..11,
                            },
                        ),
                    ),
                    range: PhantomData<ruff_text_size::range::TextRange>,
                },
            ],
            body: [
                Pass(
                    StmtPass {
                        range: 13..17,
                    },
                ),
            ],
            type_comment: None,
            range: 0..17,
        },
    ),
]
